@@ -1,0 +1,47 @@
+# Send email using Java Mail (http://java.sun.com/products/javamail/)
+#
+# This Grinder Jython script should only be used for legal email test
+# traffic generation within a lab testbed environment. Anyone using
+# this script to generate SPAM or other unwanted email traffic is
+# violating the law and should be exiled to a very bad place for a
+# very long time.
+#
+# Copyright (C) Tom Pittard, 2004
+# Copyright (C) Philip Aston, 2004
+
+from net.grinder.script.Grinder import grinder
+from net.grinder.script import Test
+
+from java.lang import System
+from javax.mail import Message, Session
+from javax.mail.internet import InternetAddress, MimeMessage
+
+
+emailSendTest1 = Test(1, "Email Send Engine")
+
+class TestRunner:
+    def __call__(self):
+        smtpHost = "mailhost"
+        
+        properties = System.getProperties()
+        properties["mail.smtp.host"] = smtpHost
+        session = Session.getInstance(System.getProperties())
+        session.debug = 1
+
+        message = MimeMessage(session)
+        message.setFrom(InternetAddress("TheGrinder@yourtestdomain.net"))
+        message.addRecipient(Message.RecipientType.TO,
+                             InternetAddress("you@yourtestdomain.net"))
+        message.subject = "Test email %s from thread %s" % (grinder.runNumber,
+                                                            grinder.threadID)
+
+        # One could vary this by pointing to various files for content
+        message.setText("SNTPTransport Email works from The Grinder!")
+
+        # Wrap transport object in a Grinder Jython Test Wrapper
+        transport = emailSendTest1.wrap(session.getTransport("smtp"))
+
+        transport = emailSendTest1.wrap(transport)
+        transport.connect(smtpHost, "username", "password")
+        transport.send(message)
+        transport.close()
