@@ -26,6 +26,8 @@ Grinder 3.0-beta17
   significantly higher. Thanks to Joshua Reedy for prompting me to do
   this, and for testing the change.
 
+  Email script example from Tom Pittard.
+
 
 Grinder 3.0-beta16
 ------------------
